--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-registration-redux==1.4
 django-taggit==0.18.3
 future==0.15.2
 gunicorn==19.5.0
+opbeat==3.3.1
 psycopg2==2.6.1
 ptyprocess==0.5.1
 six==1.10.0
