--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 CommonMark==0.6.4
+defusedxml==0.4.1
 dj-database-url==0.4.1
 Django==1.9.6
+django-allauth==0.25.2
 django-compat==1.0.11
 django-hijack==2.1.1
 django-hijack-admin==2.1.1
 django-markwhat==1.5
-django-registration-redux==1.4
 django-taggit==0.18.3
 future==0.15.2
 gunicorn==19.5.0
+oauthlib==1.1.1
 opbeat==3.3.1
 psycopg2==2.6.1
 ptyprocess==0.5.1
+python3-openid==3.0.10
+requests==2.10.0
+requests-oauthlib==0.6.1
 six==1.10.0
 sqlparse==0.1.19
 sysenv==0.1.0
